chore: adding test case (refs #15)